--- a/src/main/webapp/end.html
+++ b/src/main/webapp/end.html
@@ -4,11 +4,11 @@
 </div>
 <script src="validation.js">
 </script>
-<script src="button.js">
-</script>
+<!--<script src="button.js">
+</script>-->
 </body>
 </html>
-<script>
+<!--<script>
     function nameValidator() {
         let x = document.forms["myForm"]["fname"].value;
         console.log("I'm there");
@@ -17,4 +17,4 @@
             return false;
         }
     }
-</script>
+</script>-->
